@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.crunchyreroll" name="Crunchyroll" version="1.0.4" provider-name="Xtero">
+<addon id="plugin.video.crunchyreroll" name="Crunchyroll" version="X.X.X" provider-name="Xtero">
     <requires>
         <import addon="xbmc.python" version="3.0.1"/>
         <import addon="script.module.inputstreamhelper" version="0.3.3"/>
@@ -23,12 +23,7 @@
         <disclaimer lang="de_DE">HINWEIS: Du MUSST PREMIUM Mitglied sein um dieses Plugin zu benutzen</disclaimer>
         <disclaimer lang="fr_FR">ATTENTION: Vous DEVEZ être un utilisateur PREMIUM pour pouvoir utiliser ce plugin</disclaimer>
         <news>
-            v1.0.4(2024.04.27)
-            - Update settings to modern format
-            - Add a way to clean subtitles cache
-            - Change way to handle special episode number (#14)
-            - Remove references to setting resolution (#13)
-            - Update Basic Auth and User Agent
+            vX.X.X(2024.XX.XX)
         </news>
         <license>GNU Affero General Public License, v3</license>
         <forum></forum>
