@@ -1,3 +1,8 @@
+vX.X.X(2024.XX.XX)
+- Remove CMS endpoint usage
+- Add multiprofile capability in Auth module
+- Add reading multiprofile info in Client module
+
 v1.0.4(2024.04.27)
 - Update settings to modern format
 - Add a way to clean subtitles cache
